# mobile

./: README.md
calculator/: README.md
calculator/lib/: calculator.dart  main.dart
calendar/: README.md  pubspec.yaml
calendar/lib/: main.dart
calendar/lib/screens/: calendar_screen.dart
calendar/lib/theme/: theme.dart
converter/: README.md  pubspec.yaml
converter/lib/: main.dart
financial_magazine/: README.md  pubspec.yaml
financial_magazine/android/app/: build.gradle
financial_magazine/ios/Runner.xcodeproj/: project.pbxproj
financial_magazine/lib/: main.dart
financial_magazine/linux/: CMakeLists.txt  my_application.cc
financial_magazine/web/: index.html  manifest.json
financial_magazine/windows/: CMakeLists.txt
news_app/backend_news_app/: .gitignore  alembic.ini  pyproject.toml
news_app/frontend_news_app/: README.md  pubspec.yaml
product_directory/backend_product_directory/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
product_directory/backend_product_directory/Docker/: start.sh
product_directory/backend_product_directory/alembic/versions/: 2024_11_10_2302-65525b4a9d79_init.py
product_directory/backend_product_directory/src/: app.py
product_directory/backend_product_directory/src/product/: routers.py  schemas.py  services.py
product_directory/backend_product_directory/static/images/: carrot.jfif  milkshake.jfif
product_directory/front_product_directory/: README.md  pubspec.yaml
todo/: README.md  pubspec.yaml
todo/lib/: main.dart
weather_app/: README.md  pubspec.yaml
weather_app/lib/: main.dart
(+83 files in other folders)
